--- a/cooperhewitt/src/main/res/layout/art_object_item.xml
+++ b/cooperhewitt/src/main/res/layout/art_object_item.xml
@@ -14,18 +14,18 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<android.support.v7.widget.CardView android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    xmlns:android="http://schemas.android.com/apk/res/android">
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
 
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/colorPrimary"
-    android:orientation="vertical">
+  <android.support.constraint.ConstraintLayout
+      xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto"
+      xmlns:tools="http://schemas.android.com/tools"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:background="@color/colorPrimary"
+      android:orientation="vertical">
 
     <TextView
         android:id="@+id/id"
@@ -40,60 +40,55 @@
         android:background="@drawable/image_border"
         android:gravity="left"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Id goes here" />
+        tools:text="Id goes here"/>
 
 
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="272dp"
+        android:layout_height="50dp"
+        android:gravity="center_horizontal|center_vertical"
+        android:minLines="3"
+        app:layout_constraintLeft_toRightOf="@id/id"
+        tools:text="Beautiful Art with many lines of nonsense text"
+        app:layout_constraintHorizontal_bias="1.0"/>
 
 
+    <ImageView
+        android:id="@+id/thumbnail"
+        android:layout_width="85dp"
+        android:layout_height="85dp"
+        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/image_border2"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"/>
 
 
-  <TextView
-      android:id="@+id/title"
-      android:layout_width="272dp"
-      android:layout_height="50dp"
-      android:gravity="center_horizontal|center_vertical"
-      android:minLines="3"
-      app:layout_constraintLeft_toRightOf="@id/id"
-      tools:text="Beautiful Art with many lines of nonsense text"
-      app:layout_constraintHorizontal_bias="1.0"/>
+    <TextView
+        android:id="@+id/medium"
+        android:layout_width="272dp"
+        android:layout_height="50dp"
+        android:gravity="center_horizontal|center_vertical"
+        android:minLines="3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/thumbnail"
+        tools:text="this is  medium text\n and might be multiple lines"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@color/white"
+        android:id="@+id/space"/>
 
-  <ImageView
-      android:id="@+id/thumbnail"
-      android:layout_width="85dp"
-      android:layout_height="85dp"
-      app:layout_constraintTop_toBottomOf="@id/title"
-      app:layout_constraintStart_toStartOf="parent"
-      android:layout_marginStart="8dp"
-      app:layout_constraintEnd_toEndOf="parent"
-      android:background="@drawable/image_border2"
-      android:layout_marginEnd="8dp"
-      android:layout_marginTop="8dp"/>
-
-
-  <TextView
-      android:id="@+id/medium"
-      android:layout_width="272dp"
-      android:layout_height="50dp"
-      android:gravity="center_horizontal|center_vertical"
-      android:minLines="3"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/thumbnail"
-      tools:text="this is  medium text\n and might be multiple lines"
-      app:layout_constraintBottom_toBottomOf="parent"/>
-
-
-  <Space
-      android:layout_width="wrap_content"
-      android:layout_height="30dp"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      android:layout_marginStart="8dp"
-      android:layout_marginEnd="8dp"
-      android:background="@color/white"
-      android:id="@+id/space"/>
-
-</android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
+  </android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.CardView>
