--- a/cooperhewitt/src/main/res/layout/art_object_item.xml
+++ b/cooperhewitt/src/main/res/layout/art_object_item.xml
@@ -47,11 +47,12 @@
         android:id="@+id/title"
         android:layout_width="272dp"
         android:layout_height="50dp"
-        android:gravity="center_horizontal|center_vertical"
-        android:minLines="3"
+        android:gravity="center"
+        android:minLines="4"
+        android:ellipsize="end"
         app:layout_constraintLeft_toRightOf="@id/id"
         tools:text="Beautiful Art with many lines of nonsense text"
-        app:layout_constraintHorizontal_bias="1.0"/>
+       />
 
 
     <ImageView
