--- a/cooperhewitt/src/main/res/values/colors.xml
+++ b/cooperhewitt/src/main/res/values/colors.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2017 The Android Open Source Project
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -16,11 +15,11 @@
   -->
 
 <resources>
-  <color name="colorPrimary">#c13eff</color>
-  <color name="colorPrimary50">#E0A3F3</color>
-  <color name="colorPrimaryDark">#010103</color>
-  <color name="colorPrimaryDark80">#002266</color>
-  <color name="colorAccent">#ffb968</color>
-  <color name="white">#ffffff</color>
-  <color name="lightningbug">#ffcb09</color>
+    <color name="colorPrimary">#c13eff</color>
+    <color name="colorPrimary50">#E0A3F3</color>
+    <color name="colorPrimaryDark">#010103</color>
+    <color name="colorPrimaryDark80">#002266</color>
+    <color name="colorAccent">#ffb968</color>
+    <color name="white">#ffffff</color>
+    <color name="lightningbug">#ffcb09</color>
 </resources>
