--- a/cooperhewitt/src/main/res/drawable/divider.xml
+++ b/cooperhewitt/src/main/res/drawable/divider.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-       android:shape="rectangle">
+    android:shape="rectangle">
 
-  <solid android:color="@color/white"/>
-  <solid android:color="@color/white"/>
-  <solid android:color="@color/white"/>
-  <size android:height="1dp" android:width="800dp"/>
+    <solid android:color="@color/white" />
+    <solid android:color="@color/white" />
+    <solid android:color="@color/white" />
+    <size
+        android:width="800dp"
+        android:height="1dp" />
 
 </shape>
