--- a/cooperhewitt/src/main/res/layout/art_object_item.xml
+++ b/cooperhewitt/src/main/res/layout/art_object_item.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2017 The Android Open Source Project
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,81 +14,79 @@
   ~ limitations under the License.
   -->
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-  <android.support.constraint.ConstraintLayout
-      xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto"
-      xmlns:tools="http://schemas.android.com/tools"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:background="@color/colorPrimary"
-      android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/id"
-        android:layout_width="wrap_content"
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:minLines="1"
-        android:padding="12dp"
-        android:background="@drawable/image_border"
-        android:gravity="left"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Id goes here"/>
+        android:background="@color/colorPrimary"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/image_border"
+            android:gravity="left"
+            android:minLines="1"
+            android:padding="12dp"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Id goes here" />
 
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="272dp"
-        android:layout_height="50dp"
-        android:gravity="center"
-        android:minLines="4"
-        android:ellipsize="end"
-        app:layout_constraintLeft_toRightOf="@id/id"
-        tools:text="Beautiful Art with many lines of nonsense text"
-       />
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="272dp"
+            android:layout_height="50dp"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:minLines="4"
+            app:layout_constraintLeft_toRightOf="@id/id"
+            tools:text="Beautiful Art with many lines of nonsense text" />
 
 
-    <ImageView
-        android:id="@+id/thumbnail"
-        android:layout_width="65dp"
-        android:layout_height="65dp"
-        app:layout_constraintTop_toBottomOf="@id/title"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="@drawable/image_border2"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"/>
+        <ImageView
+            android:id="@+id/thumbnail"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/image_border2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/title" />
 
 
-    <TextView
-        android:id="@+id/medium"
-        android:layout_width="272dp"
-        android:layout_height="50dp"
-        android:gravity="center_horizontal|center_vertical"
-        android:minLines="3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/thumbnail"
-        tools:text="this is  medium text\n and might be multiple lines"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        <TextView
+            android:id="@+id/medium"
+            android:layout_width="272dp"
+            android:layout_height="50dp"
+            android:gravity="center_horizontal|center_vertical"
+            android:minLines="3"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/thumbnail"
+            tools:text="this is  medium text\n and might be multiple lines" />
 
 
-    <Space
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:background="@color/white"
-        android:id="@+id/space"/>
+        <Space
+            android:id="@+id/space"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:background="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-  </android.support.constraint.ConstraintLayout>
+    </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
